[package]
name = "twitch_commands"
version = "0.1.0"
authors = ["Giulio Caprino <julo134@gmail.com>"]
edition = "2018"

[dependencies]
twitchchat = "0.11.8"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
futures = "0.3.5"
async-stream = "0.2.1"
enigo = "0.0.14"
tokio-test = "0.2.1"
libc = "0.2.77"
toml = "0.5.6"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.11"
simplelog = "0.8.0"
winapi = { version = "0.3.9", features = ["winuser"] }
twitch_api2 = { version = "0.5.0-alpha.5", features = ["pubsub"] }
websocket = "0.26.2"
curl = "0.4.35"
chrono = "0.4.19"

[build-dependencies]
cc = "1.0.60"
